install_headers('Himinbjorg.h')
himinbjorg_sources = [
    'Components/BehaviorComponent.cpp',
    'Components/CameraComponent.cpp',
    'Components/ClickableComponent.cpp',
    'Components/ClickableOrthoPlane.cpp',
    'Components/Component.cpp',
    'Components/GeometryComponent.cpp',
    'Components/InputComponent.cpp',
    'Components/Lines.cpp',
    'Components/Mesh.cpp',
    'Components/MeshRenderer.cpp',
    'Components/OrthoPlane.cpp',
    'Components/OrthoPlaneRenderer.cpp',
    'Components/RenderingComponent.cpp',
    'Components/Text.cpp',
    'Components/TextRenderer.cpp',
    'Components/TransformComponent.cpp',
    'Systems/BehaviorSystem.cpp',
    'Systems/CameraSystem.cpp',
    'Systems/InputSystem.cpp',
    'Systems/RenderingSystem.cpp',
    'Systems/TransformSystem.cpp',
    'GraphicsManager.cpp',
    'HiminbjorgRoot.cpp',
    'InputManager.cpp',
    'Material.cpp',
    'Message.cpp',
    'MessageBus.cpp',
    'PhysicsManager.cpp',
    'ResourceManager.cpp',
    'SceneManager.cpp',
    'SceneNode.cpp',
]
himinbjorglib = shared_library(
    'himinbjorg',
    himinbjorg_sources,
    dependencies: [bullet_lib, freetype_lib, glew_lib, glfw_lib, icu_lib, soil_lib],
    install: true,
)
